Rename the Go module to "github.com/crossplane/uptest"
- Run "go mod tidy" to remove the module dependencies that are
  no longer used.
- Rename the PROJECT_REPO in the Makefile.

Signed-off-by: Alper Rifat Ulucinar <ulucinar@users.noreply.github.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -34,7 +34,7 @@ linters-settings:
   goimports:
     # put imports beginning with prefix after 3rd-party packages;
     # it's a comma-separated list of prefixes
-    local-prefixes: github.com/upbound/uptest
+    local-prefixes: github.com/crossplane/uptest
 
   gocyclo:
     # minimal code complexity to report, 30 by default (but we recommend 10-20)
